<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Financial Manager</string>
    <string name="adicionar">Add New</string>
    <string name="Categoria">Categories</string>
    <string name="Conta">Accounts</string>
    <string name="Lancamento">Releases</string>
    <string name="comboStatus">Situation</string>
    <string name="comboTipo">Type</string>
    <string name="comboCategoria">Category</string>
    <string name="Empresa">Participants</string>
    <string name="comboEmpresa">Participants</string>
    <string name="comboConta">Account</string>
    <string name="Configuracao">Settings</string>
    <string name="Resumo">Summary</string>
    <string name="Senha">Password</string>
    <string name="ExportarSd">Export Data to SD Card</string>
    <string name="Exportar">Export</string>
    <string name="RestaurarSd">SD Card Data Restore</string>
    <string name="Restaurar">Restore</string>
    <string name="AlterarSenha">Change Password</string>
    <string name="Voltar">Back</string>
    <string name="Descricao">Description:</string>
    <string name="Tipo">Type:</string>
    <string name="Salvar">Save</string>
    <string name="Cancelar">Cancel</string>
    <string name="Excluir">Delete</string>
    <string name="Banco">Bank:</string>
    <string name="Agencia">Agency:</string>
    <string name="ContaCorrente">Account:</string>
    <string name="SaldoInicial">Opening Balance:</string>
    <string name="SaldoAtual">Current Balance:</string>
    <string name="Nome">Name:</string>
    <string name="Telefone">Phone:</string>
    <string name="Ligar">Call</string>
    <string name="Participante">Participant:</string>
    <string name="Vencimento">Maturity:</string>
    <string name="Conta1">Account:</string>
    <string name="Categoria1">Category:</string>
    <string name="Situacao">Location:</string>
    <string name="Valor">Value:</string>
    <string name="Observacao">Note:</string>
    <string name="Replicar">Replicate</string>
    <string name="Qtd">QTY:</string>
    <string name="Baixar">Download</string>
    <string name="Pagamento">Payment</string>
    <string name="Buscar">Search</string>
    <string name="Total">Total</string>
    <string name="Receitas">Recipes</string>
    <string name="Despesas">Expenses</string>
    <string name="Saldo">Balance</string>
    <string name="SaldoAtualContas">Current Balance in the account:</string>
    <string name="NovaSenha">New Password:</string>
    <string name="Confirmacao">Confirmation:</string>
    <string name="Desconto">Discount:</string>
    <string name="Multa">Mulct:</string>
    <string name="Pagamento1">Payment:</string>
    <string name="DataVencimentoInicial">Initial Maturity Date</string>
    <string name="DataVencimentoFinal">Final Maturity Date</string>
    <string name="Ok">OK</string>
    <string name="DesenvolvidoPor">Developed by Marcos Aoki and William Parige.</string>
    <string name="DuvidasCorrecoes">Questions, corrections, suggestions and more information send email to:</string>
    <string name="InserirNovo">Add New</string>
    <string name="Sobre">About</string>
    <string name="ConfirmaExclusao">Confirm Delete</string>
    <string name="Sim">Yes</string>
    <string name="Nao">No</string>
    <string name="CampoDescricaoObrigatorio">Field description required</string>
    <string name="SalvoComSucesso">Saved successfully</string>
    <string name="SdCardNaoDisponivelExportacao">SD Card not available. Unable to export</string>
    <string name="Aviso">Warning</string>
    <string name="ArquivoPasta">The file must be within the controle_financeiro backupControleFinanceiro folder on the SD card.</string>
    <string name="SdCardNaoDisponivelImportacao">SD Card not available. Unable to import</string>
    <string name="ExportandoBD">Exporting database...</string>
    <string name="ExportacaoSucesso">Export to folder backupControleFinanceiro was successful</string>
    <string name="ExportacaoNaoRealizada">Unrealized Export</string>
    <string name="ImportandoBD">Importing database...</string>
    <string name="RestauracaoSucesso">Restore completed successfully</string>
    <string name="RestauracaoNaoRealizada">Unrealized Restoration</string>
    <string name="NovaSenhaNaoConfirmada">New password was not confirmed</string>
    <string name="Informacoes">Information</string>
    <string name="CampoBancoObrigatorio">Field bank required</string>
    <string name="CampoSaldoInicialObrigatorio">Field opening balance required</string>
    <string name="CampoSaldoInicialInvalido">Field opening balance invalid</string>
    <string name="NumeroInvalido">Invalid number</string>
    <string name="CampoNomeObrigatorio">Field name required</string>
    <string name="BuscarLancamento">Search Release</string>
    <string name="ListarTodos">List All</string>
    <string name="ListarPendentes">Pending List</string>
    <string name="VerResumo">View Summary</string>
    <string name="BaixarLancamento">Release Download</string>
    <string name="InformeQuantidadeParcelas">Specify the number of shares</string>
    <string name="CampoValorNegativo">​​Field value can not be negative</string>
    <string name="CampoValorZero">Field value must be greater than zero</string>
    <string name="CampoValorInvalido">Field value invalid</string>
    <string name="CampoDescontoNegativo">Field ​​discount can not be negative</string>
    <string name="CampoMultaNegativo">Field ​​fine can not be negative</string>
    <string name="CampoDescontoInvalido">Field discount invalid</string>
    <string name="CampoMultaInvalido">Field fine invalid</string>
    <string name="InserirParticipante">Insert Participant</string>
    <string name="Selecione">Select...</string>
    <string name="DetalharPorCategoria">Details by Category</string>
    <string name="SenhaInvalida">Invalid Password</string>
    <string name="CampoParticipanteObrigatorio">Field participant required</string>
    <string name="CampoContaObrigatorio">Field account required</string>
    <string name="CampoCategoriaObrigatorio">Field category Required</string>
    <string name="CampoValorObrigatorio">Field value required</string>
</resources>
