<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow>
        <TextView android:textColor="#ff000000" android:id="@id/labelDescricaoCategoria" android:text="@string/Descricao" />
    </TableRow>
    <TableRow>
        <EditText android:id="@id/campoEditarDescricaoCategoria" android:layout_width="240.0px" android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView android:textColor="#ff000000" android:id="@id/Tx_Tipo" android:text="@string/Tipo" />
    </TableRow>
    <TableRow>
        <Spinner android:id="@id/comboEditarTipoCategoria" android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawSelectorOnTop="true" android:prompt="@string/comboTipo" />
    </TableRow>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="fill_parent">
        <Button android:id="@id/btSalvarEditarCategoria" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Salvar" />
        <Button android:id="@id/btCancelarEditarCategoria" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Cancelar" />
    </LinearLayout>
</TableLayout>